add  custom pagesize

--- a/bus_info/templates/bus_info/index.html
+++ b/bus_info/templates/bus_info/index.html
@@ -13,28 +13,23 @@
         <div class="col-sm-3"
             style="background-color: #dedef8;
             box-shadow: inset 1px -1px 1px #444, inset -1px 1px 1px #444;">
-            <div class="btn-group">
-    <button type="button" class="btn btn-default" data-toggle="modal" data-target="#myModal">按钮 1</button>
-    <button type="button" class="btn btn-default">按钮 2</button>
-    <button type="button" class="btn btn-default">按钮 3</button>
-</div>
 <div class="dropdown">
-    <button type="button" class="btn dropdown-toggle" id="dropdownMenu1" data-toggle="dropdown">测试
+    <button type="button" class="btn dropdown-toggle" id="dropdownMenu1" data-toggle="dropdown">设置每页数据量
         <span class="caret"></span>
     </button>
     <ul class="dropdown-menu pull-right" role="menu" aria-labelledby="dropdownMenu1">
         <li role="presentation">
-            <a role="menuitem" tabindex="-1" href="export">导出加油站数据到文档</a>
+            <a role="menuitem" tabindex="-1" href="{% url 'bus_info:reset_table_size' 10 %}">设置为每页10个数据</a>
         </li>
         <li role="presentation">
-            <a role="menuitem" tabindex="-1" href="#">数据挖掘</a>
+            <a role="menuitem" tabindex="-1" href="{% url 'bus_info:reset_table_size' 30 %}">设置为每页30个数据</a>
         </li>
         <li role="presentation">
-            <a role="menuitem" tabindex="-1" href="#">数据通信/网络</a>
+            <a role="menuitem" tabindex="-1" href="{% url 'bus_info:reset_table_size' 50 %}">设置为每页50个数据</a>
         </li>
         <li role="presentation" class="divider"></li>
         <li role="presentation">
-            <a role="menuitem" tabindex="-1" href="#">分离的链接</a>
+            <a role="menuitem" tabindex="-1" href="{% url 'bus_info:reset_table_size' 100 %}">设置为每页100个数据</a>
         </li>
     </ul>
 </div>
@@ -120,5 +115,10 @@
 		</div><!-- /.modal-content -->
 	</div><!-- /.modal -->
 </div>
+<script>
+function saveButton(){
+	alert("Welcome");
+}
+</script>
 </body>
 </html>
